--- a/midterm_test_script.ipynb
+++ b/midterm_test_script.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Run the code and this block to display your student ID\n",
     "assert isinstance(id_student,int)\n",
-    "print(\"Success! Your student ID is \" id_student)"
+    "print(\"Success! Your student ID is \", id_student)"
    ]
   }
  ],
