--- a/week6.ipynb
+++ b/week6.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We saw in class how to analyze this process analytically. In particular, the probability of survival is a fixed point of the generating function of the reproduction law. Calculate and enter the generating function. Running the code will plot the function and the line y=x. Find the fixed point and compare with the previous value you found"
+    "We saw in class how to analyze this process analytically. In particular, the probability of extinction is a fixed point of the generating function of the reproduction law. Calculate and enter the generating function. Running the code will plot the function and the line y=x. Find the fixed point and compare with the previous value you found"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
